2009-05-18  Darren Kenny  <darren.kenny@sun.com>

	* common/help_refs.h:
	  Header file containing a generated list of all HELP document
	  references.
	* scripts/extract_help_tags.pl:
	  Script to generate the help_refs.h file from a help file.
	* capplet/nwam-manager-properties.glade:
	* capplet/nwam-manager-properties.ui:
	  Add Help button to the Location dialog.
	* capplet/nwam_conn_conf_ip_panel.c, capplet/nwam_conn_stat_panel.c,
	  capplet/nwam_env_pref_dialog.c, capplet/nwam_location_dialog.c,
	  capplet/nwam_net_conf_panel.c, capplet/nwam_vpn_pref_dialog.c: 
	  Make sure that Help buttons link to appropriate locations is Help
	  document.
	* common/libnwamui.c, common/libnwamui.h:
	  Make help function handle a NULL location, and add help_refs to
	  libnwamui.h header file.

2009-05-18  Lin Ma  <Lin.Ma@Sun.COM>

	* capplet/nwam_net_conf_panel.c (nwam_compose_tree_view),
	(refresh), (nwam_net_conf_update_status_cell_cb),
	(on_button_clicked), (selection_func), (update_widgets),
	(ncu_pri_group_get_hash), (ncu_pri_group_get_path),
	(ncu_pri_group_get_iter), (ncu_pri_group_update):
	Fixed group id is increasing infinitely by using ncu_pri_group_update
	to collapse group id.

2009-05-18  Darren Kenny  <darren.kenny@sun.com>

	* Makefile.am, autogen.sh, configure.in, help/Makefile.am,
	  help/nwam-manager.omf.in, help/nwam-manager.xml,
	  help/C/graphics/condition-location.png,
	  help/C/graphics/connection-properties-ipv4.png,
	  help/C/graphics/connection-properties-wireless.png,
	  help/C/graphics/connection-status.png,
	  help/C/graphics/locationprefs-dialog.png,
	  help/C/graphics/manual-location.png,
	  help/C/graphics/nwprofile-auto.png,
	  help/C/graphics/nwprofile-user.png,
	  help/C/graphics/nwstatus-context-menu.png,
	  help/C/graphics/panel-all-disconnect.png,
	  help/C/graphics/panel-some-disconnect.png,
	  help/C/graphics/panel-wired-connect.png,
	  help/C/graphics/panel-wireless-connect.png,