@@ -1,3 +1,8 @@
+2009-05-19  Lin Ma  <Lin.Ma@Sun.COM>
+
+	* capplet/nwam_net_conf_panel.c (capplet_tree_store_move_children),
+	(on_button_clicked), (selection_func): New/delete group is done.
+
 2009-05-18  Darren Kenny  <darren.kenny@sun.com>
 
 	* common/help_refs.h:
